# grammar-generator

./: README.md  generator-generator.cabal  grammar-generator.cabal
src/: Any.hs  Grammar.hs  Main.hs
